# aseed-types

./: .gitmodules  README.md  adl_scope.h  existence.h  sequence.h
test/: CMakeLists.txt  adl_scope.test.h  test.cpp
